--- a/poc/src/main/resources/org/epa/mda/poc/EPA_Admin_Approval-taskform.form
+++ b/poc/src/main/resources/org/epa/mda/poc/EPA_Admin_Approval-taskform.form
@@ -150,8 +150,18 @@
 <property name="inputBinding" value="numFacilitiesIn"/>
 <property name="fieldClass" value="java.lang.Integer"/>
 </field>
+<field position="15" name="numFines" type="InputTextInteger" id="984158254">
+<property name="fieldRequired" value="false"/>
+<property name="label" value="quot;SSClassquot;,quot;quot;quot;SSStylequot;,quot;quot;quot;caquot;,quot;quot;quot;dequot;,quot;quot;quot;enquot;,quot;Number of Fines or Violationsquot;quot;esquot;,quot;quot;quot;frquot;,quot;quot;quot;jaquot;,quot;quot;quot;ptquot;,quot;quot;quot;zhquot;,quot;quot;"/>
+<property name="errorMessage" value="quot;caquot;,quot;quot;quot;dequot;,quot;quot;quot;enquot;,quot;quot;quot;esquot;,quot;quot;quot;frquot;,quot;quot;quot;jaquot;,quot;quot;quot;ptquot;,quot;quot;quot;zhquot;,quot;quot;"/>
+<property name="title" value="quot;caquot;,quot;quot;quot;dequot;,quot;quot;quot;enquot;,quot;quot;quot;esquot;,quot;quot;quot;frquot;,quot;quot;quot;jaquot;,quot;quot;quot;ptquot;,quot;quot;quot;zhquot;,quot;quot;"/>
+<property name="readonly" value="false"/>
+<property name="inputBinding" value="numFinesIn"/>
+<property name="fieldClass" value="java.lang.Integer"/>
+</field>
 <dataHolder inputId="companyIn" name="#E9E371" type="dataModelerEntry" outId="" value="org.epa.mda.poc.Company" id="company"/>
 <dataHolder inputId="numFacilitiesIn" name="#E9E371" type="basicType" outId="" value="java.lang.Integer" id="numFacilities"/>
+<dataHolder inputId="numFinesIn" name="#E9E371" type="basicType" outId="" value="java.lang.Integer" id="numFines"/>
 <dataHolder inputId="registerFacilityIn" name="#E9E371" type="basicType" outId="" value="java.lang.Boolean" id="registerFacility"/>
 <dataHolder inputId="ticketNumberIn" name="#E9E371" type="basicType" outId="" value="java.lang.String" id="ticketNumber"/>
 </form>
